<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="5"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:iconTint="#FFEBEE"
        android:orderInCategory="110"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:iconTint="#FFEBEE"
        android:orderInCategory="100"
        android:title="@string/add_new_recipe"
        android:visible="true"
        app:showAsAction="always" />
</menu>